force-app/main/default/objects/Krow__Invoice_Expense_Item__c/Krow__Invoice_Expense_Item__c.object-meta.xml
<CustomObject>
    <label>Invoice Expense Item</label>
    <nameField>
        <displayFormat>IEI-{0000}</displayFormat>
        <label>Invoice Expense Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Invoice Expense Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>