force-app/main/default/objects/Krow__Invoice_Expense_Item__c/fields/Krow__Amount__c.field-meta.xml
<CustomField>
    <fullName>Krow__Amount__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>