force-app/main/default/objects/Krow__Invoice_Expense_Item__c/fields/Krow__Date__c.field-meta.xml
<CustomField>
    <fullName>Krow__Date__c</fullName>
    <label>Date</label>
    <type>Date</type>
</CustomField>