force-app/main/default/objects/Krow__Invoice_Expense_Item__c/fields/Krow__Include__c.field-meta.xml
<CustomField>
    <fullName>Krow__Include__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Include</label>
    <type>Checkbox</type>
</CustomField>