force-app/main/default/objects/Krow__Invoice_Expense_Item__c/fields/Krow__Product_from_Expense_Type__c.field-meta.xml
<CustomField>
    <fullName>Krow__Product_from_Expense_Type__c</fullName>
    <description>it loads productid of expense type from expense item</description>
    <formula>Krow__Expense_Item__r.Krow__Expense_Type__r.Krow__Default_Product__c</formula>
    <inlineHelpText>it loads productid of expense type from expense item</inlineHelpText>
    <label>Product from Expense Type</label>
    <type>Text</type>
</CustomField>