force-app/main/default/objects/Krow__Invoice_Expense_Item__c/fields/Krow__Project_Resource__c.field-meta.xml
<CustomField>
    <fullName>Krow__Project_Resource__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project Resource</label>
    <referenceTo>Krow__Project_Resources__c</referenceTo>
    <relationshipLabel>Invoice Expense Items</relationshipLabel>
    <relationshipName>Invoice_Expense_Items</relationshipName>
    <type>Lookup</type>
</CustomField>